<resources>
    <string name="app_name">AN Social</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="postDetailsAuthorTimestamp"> 07|05|2020| by First Class</string>

    <!--    Navigation Drawer-->
    <string name="home_second">Home Second</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_messages">Messages</string>

    <!--Welcome Greeting-->
    <string name="welcome_asikana">Welcome Asikana!</string>
    <string name="connect_collaborate">Connect, and Collaborate with capable confident women through technology</string>
    <string name="get_started">Lets get started</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_create_account">Create account</string>

    <!--Registration-->
    <string name="full_name">Full Name</string>
    <string name="display_name">Display Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="action_next">Next</string>
    <string name="step1_registration">Step 1</string>
    <string name="postDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <!--    Registration Step 2-->
    <string name="about_yourself">Hey Asikana, tell us a little more about yourself!</string>
    <string name="occupation">Occupation</string>
    <string name="aspirations">What do you hope to gain from joining the community?</string>
    <string name="finish_button">Finish</string>
    <string name="title_activity_stories">StoriesActivity</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="user_created_group">%s created the group</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author_name">Author Name</string>
    <string name="post_timestamp">Post Timestamp</string>
    <string name="post_title">Post Title</string>
    <string name="posted_in_group_name">Posted in: Group Name</string>
    <string name="menu_save_post">Save</string>
    <string name="menu_cancel_post">Cancel</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="edit_title">Title</string>
    <string name="description_image_post">Image Post</string>
    <string name="Body">Enter Post</string>
    <string name="no_data_available">No posts yet</string>

    <string name="yesterday">Yesterday</string>
    <string name="tag_fragment_home">Home</string>
    <!--Fragments-->
    <string name="tag_fragment_newPost">New Post</string>
    <string name="tag_fragment_messages">Messages</string>
    <string name="tag_fragment_settings">Settings</string>
    <string name="tag_fragment_group_details">Group Details</string>
    <string name="tag_fragment_view_profile">View Profile</string>
    <string name="tag_fragment_chat">Chat</string>
    <string name="tag_fragment_group_posts">Group Posts</string>
    <string name="action_save">Save</string>
    <string name="update">Update</string>
    <string name="action_cancel">Cancel</string>
    <string name="menu_edit_profile">"Edit "</string>
    <string name="menu_delete_account">Delete Account</string>
    <string name="post_detail_title">Hey there! I am your post title</string>
    <string name="post_image_view">Post Image View</string>
    <string name="post_detail_body">Hey there! I am your body</string>
    <string name="title_activity_group_host">GroupHostActivity</string>
    <string name="no_group_explanation">Be the first to add a group by clicking on the button below</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="group_image">Group Image</string>
    <string name="title_group">Title</string>
    <string name="desc_group">Description</string>
    <string name="action_join_group">Join</string>
    <string name="action_add_comment">Add</string>
    <string name="action_upload_image">Upload image</string>
    <string name="user_display_name">User Display Name</string>
    <string name="view_profile">View Profile</string>
    <string name="menu_posts">Posts</string>
    <string name="menu_events">Events</string>
    <string name="no_posts_yet">No Posts to show</string>
    <string name="no_posts_in_group">No Posts in Group</string>
    <string name="app_name_welcome">AN Social</string>
    <string name="action_view_group">View</string>
    <string name="author_image">Author Image</string>
    <string name="post_timeOf">Post Timestamp</string>
    <string name="author">Author Name</string>
    <string name="posted_in_group">Posted in:</string>
    <string name="fetching_user_data">Fetching user data...</string>
    <string name="initializing">Initialising...</string>
    <string name="group_details">Group Details</string>
    <string name="menu_share">Share</string>
    <string name="menu_notifications">Notifications</string>
    <string name="communicate_menu">Communicate</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="user_profile">Profile</string>
    <string name="user_sign_out">Sign Out</string>
    <string name="add_comment">Add comment</string>
    <string name="text_comment_goes_here">Text Comment Goes Here</string>
    <string name="comment_date">10:20</string>
    <string name="location">Location</string>
    <string name="phone_address">Phone Address</string>
    <string name="about_user">About User</string>
    <string name="user_bio">Enter your bio</string>
    <string name="name">Name</string>
    <string name="choose_an_image">Choose an image</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="about">About</string>
    <string name="update_profile">Update</string>

</resources>
