<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ui.posts.PostDetailsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_add_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorAccent"
            android:text="@string/action_add_comment"
            app:layout_constraintBottom_toBottomOf="@+id/editText_add_comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editText_add_comment"
            app:layout_constraintTop_toTopOf="@+id/editText_add_comment" />

        <EditText
            android:id="@+id/editText_add_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/edit_text_button_style_rounded"
            android:ems="10"
            android:hint="@string/add_comment"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/comment_author_image"
            app:layout_constraintStart_toEndOf="@+id/comment_author_image"
            app:layout_constraintTop_toTopOf="@+id/comment_author_image" />

        <ImageView
            android:id="@+id/postDetailsImage"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:contentDescription="@string/post_image_view"
            android:scaleType="center"
            android:src="@drawable/placeholder_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/comment_author_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/post_image_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_detail_desc"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/post_detail_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="8dp"
            android:padding="4dp"
            android:text="@string/postDesc"
            android:textColor="#373737"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_detail_date_name" />

        <TextView
            android:id="@+id/postDetailsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/post_detail_title"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postDetailsImage" />

        <TextView
            android:id="@+id/post_detail_date_name"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="8dp"
            android:text="@string/postDetailsAuthorTimestamp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/postDetailsAuthorName"
            android:layout_width="0dp"
            android:layout_height="21dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/author_name"
            android:paddingHorizontal="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/post_detail_date_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/post_detail_date_name"
            app:layout_constraintTop_toTopOf="@+id/post_detail_date_name"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postDetailsTitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comment_recycler_view"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_add_comment"
            android:layout_height="match_parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>